bug 236707 ARABIC COMMA's Joining Class is wrong patch by Behnam Esfahbod <behnam@esfahbod.info> r=smontagu sr=rbs a=mkaply